--- a/src/componants/Navigation.css
+++ b/src/componants/Navigation.css
@@ -1,20 +1,8 @@
-* {
- margin: 0;
- position: relative;
- overflow: scroll;
- scroll-behavior: smooth;
-}
-
-body {
-   background-image: radial-gradient(circle, #e0ffff, #e4fdff, #e9fcff, #eefaff, #f3f9ff, #f2f6fc, #f1f2f8, #efeff4, #e8e8ec, #e1e1e3, #dadadb, #d3d3d3);
-}
-
-/* Navigation CSS */
-/* .navbar {
+.navbar {
     width: 100%;
     height: 50px;
-    background-color: blanchedalmond;
-    position: sticky;
+    background-color: azure;
+    position: fixed;
     top: 0;
     display: flex;
     align-items: center;
@@ -44,6 +32,7 @@ body {
     height: 40px;
     border-radius: 50px;
     object-fit: cover; 
+    cursor: pointer;
 }
 
 .navCenter {
@@ -70,4 +59,4 @@ body {
  color: #666; 
  cursor: pointer; 
  margin-left: 15px; 
-} */
+}
