--- a/src/componants/Footer.css
+++ b/src/componants/Footer.css
@@ -1,48 +1,87 @@
 .footer {
-    width: 100%;
-    height: 50px;
-    background-color: AliceBlue;
-    position: fixed;
-    bottom: 0;
-    /* float: bottom; */
-    display: flex;
-    align-items: center;
-    font-family: 'Poiret One', cursive;
-    padding-bottom: 1rem;
-    margin-top: 1rem;
-    padding-top: 1rem;
-    text-align: block;
-} 
-
-.bottomLeft, .bottomRight {
-    flex: 3;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+	width: 100%;
+	height: 50px;
+	/* background-color: AliceBlue; */
+	position: relative;
+	bottom: 20px;
+	/* float: bottom; */
+	display: flex;
+	align-items: center;
+	font-family: "Poiret One", cursive;
+	padding-bottom: 1rem;
+	margin-top: 1rem;
+	padding-top: 1rem;
+	text-align: block;
+	/* background-color: #f2dd6e;
+    background-image: linear-gradient(319deg, #f2dd6e 0%, #cff27e 37%, #ef959d 100%); */
 }
+
+.bottomLeft,
+.bottomRight {
+	flex: 3;
+	display: flex;
+	align-items: center;
+	top: 7px;
+	justify-content: center;
+	font-size: 20px;
+	color: #ef959d;
+	/* background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+}
+
+.bottomRight p {
+	background: linear-gradient(
+		to right,
+		#ef5350,
+		#f48fb1,
+		#7e57c2,
+		#2196f3,
+		#26c6da,
+		#43a047,
+		#eeff41,
+		#f9a825,
+		#ff5722
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
 .bottomIcon {
-    font-size: 20px;
-    margin-right: 10px;
-    color: black;
-    cursor: pointer; 
+	font-size: 20px;
+	margin-right: 10px;
+	top: 0;
+	cursor: pointer;
+	color: yellowgreen;
+	border: 2px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
 .bottomCenter {
-    flex: 6;
+	flex: 6;
 }
 
 .bottomList {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+	display: flex;
+	justify-content: center;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	color: white;
 }
 
 .bottomListItem {
-    margin-right: 20px;
-    font-size: 18px;
-    font-weight: 300;
-    cursor: pointer;
+	margin-right: 20px;
+	font-size: 18px;
+	font-weight: 300;
+	cursor: pointer;
+	color: white;
 }
-
