--- a/src/componants/Header.css
+++ b/src/componants/Header.css
@@ -1,14 +1,18 @@
-.header {
+@import url("https://fonts.googleapis.com/css?family=Warnes&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Roboto:ital,wght@0,300;0,400;0,700;1,500&display=swap");
+
+/* .header {
 	background: url("https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
 	width: 100%;
 	height: 400px;
-	/* object-fit: cover; */
+	
 	background-size: cover;
 	margin-bottom: 20px;
     padding-bottom: 50px;
-}
+} */
+/* object-fit: cover; */
 
-#headerTitles {
+/* #headerTitles {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -20,14 +24,21 @@
 
 .headerTitleSm {
 	position: absolute;
-	top: 10px;
+	font-family: "Mochiy Pop One", sans-serif;
+	top: 25px;
 	font-size: 20px;
+	 background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .headerTitleLg {
 	position: absolute;
 	font-size: 50px;
-}
+	background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+} */
 
 /* .headerImg {
     width: 100%;
@@ -35,3 +46,84 @@
     margin-top: 80px;
     object-fit: cover;
 } */
+
+.header {
+	display: grid;
+	background-color: black;
+	width: 100%;
+	height: 400px;
+	margin-bottom: 100px;	
+}
+
+.headerTitleSm {
+	display: block;
+	text-align: center;
+	font-family: "Mochiy Pop One", sans-serif;
+	top: 25%;
+	font-size: 30px;
+	 /* background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+
+  background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
+    -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #0000;
+    background-clip: text;
+}
+
+
+@keyframes animatedBackground_a {
+    0% { background-position: 0 0 }
+    100% { background-position: -500px 0 }
+}
+
+.glow {
+	font-size: 100px;
+	display: block;
+	text-align: center;
+	font-family: "Monoton";
+	animation: glow 1s ease-in-out infinite alternate;
+	background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+   /* background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+}
+
+  @keyframes flicker {
+    
+	0%, 18%, 22%, 25%, 53%, 57%, 100% {
+  
+		text-shadow:
+		0 0 4px #fff,
+		0 0 11px #fff,
+		0 0 19px #fff,
+		0 0 40px #0fa,
+		0 0 80px #0fa,
+		0 0 90px #0fa,
+		0 0 100px #0fa,
+		0 0 150px #0fa;
+	
+	}
+	
+	20%, 24%, 55% {        
+		text-shadow: none;
+	}    
+  }
+  
+
+@keyframes glow {
+	from {
+	  text-shadow: 0 0 10px to left, violet, indigo, blue, green, yellow, orange, red;
+	}
+	
+	to {
+	  text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+	}
+
+}
+
+
+
