--- a/src/componants/Navigation.css
+++ b/src/componants/Navigation.css
@@ -1,9 +1,9 @@
 .navbar {
     width: 100%;
     height: 50px;
-    background-color: azure;
-    position: fixed;
-    top: 0;
+    /* background-color: azure; */
+    position: relative;
+    top: 20px;
     display: flex;
     align-items: center;
     font-family: 'Josefin Sans', sans-serif;
@@ -21,10 +21,14 @@
     flex: 6; 
 }
 .navIcon {
-    font-size: 20px;
+    width: 20px;
+    height: 20px;
     margin-right: 10px;
-    color: blue;
+    color: #FF007C;
     cursor: pointer;
+    border: 3px solid transparent; 
+    border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1;
 }
 
 .navImg {
@@ -33,6 +37,9 @@
     border-radius: 50px;
     object-fit: cover; 
     cursor: pointer;
+    /* border: 2px solid transparent; 
+    border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1; */
 }
 
 .navCenter {
@@ -42,9 +49,12 @@
 .navList {
     display: flex;
     justify-content: center;
-    padding: 0;
+    padding: 5px;
     margin: 0;
     list-style: none;
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    /* -webkit-background-clip: text; */
+
 }
 
 .navListItem {
@@ -52,11 +62,12 @@
     font-size: 18px;
     font-weight: 300;
     cursor: pointer;
+  
 }
 
 .navSearchIcon {
  font-size: 18px;
- color: #666; 
+ color: #FFF700; 
  cursor: pointer; 
  margin-left: 15px; 
 }
