--- a/src/pages/Music.css
+++ b/src/pages/Music.css
@@ -1,3 +1,129 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
+.musicContainer {
+	top: 40px;
+
+}
+
+.playerContainer {
+	text-align: center;
+	align-items: center;
+}
+
+/* .playerContainer h2 {
+	bottom: 30px;
+	color: #2243B6;
+	font-family: "Pacifico", cursive;
+	text-shadow: 2px 2px 4px#FF5470;
+	 -webkit-animation: rainbow 5s infinite; 
+} */
+
+.playerContainer {
+	bottom: 30px;
+	font-size: 30px;
+	font-family: "Pacifico", cursive;
+	text-decoration: underline;
+    -webkit-animation: animatedBackground_b 5s linear infinite alternate;
+}
+
+@keyframes animatedBackground_b{
+	0% {color: #ff8b00}
+	10% {color: #e8ff00}
+	20% {color: #5dff00}
+	30% {color: #00ff2e}
+	40% {color: #00ffb9}
+	50% {color: #00b9ff}
+	60% {color: #002eff}
+	70% {color: #5d00ff}
+	80% {color: #e800ff}
+	90% {color: #ff008b}
+	100% {color: #ff0000}
+}
+
+.listenImg {
+	height: 50px;
+	width: 60px;
+	top: 20px;
+	padding: 5px;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
+}
+
+.trackPlayer {
+	margin-top: 25px;
+	left: 26%;
+	
+	/* padding: 5px; */
+	/* align-items: center;
+	text-align: center;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1; */	 
+}
+
+.drmachineContainer {
+	height: 100%;
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	top: 30px;
+	padding: 30px;
+	margin: 30px;
+	left: 12%;
+	font-size: 30px;
+    -webkit-animation: animatedBackground_b 5s linear infinite alternate;
+}
+
 .music {
 	display: flex;
+	bottom: 50px;
+	font-family: "Pacifico", cursive;
+	text-decoration: underline;
+	-webkit-animation: animatedBackground_b 5s linear infinite alternate
+}
+
+.tpodContainer {
+	left: 10%;
+	padding: 10px;
+	margin:10px;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
+}
+
+.bpmContainer {
+	left: 20%;
+	width: 40%;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
