--- a/src/componants/mutools/BpmDetector.css
+++ b/src/componants/mutools/BpmDetector.css
@@ -1,9 +1,6 @@
-*{
-  margin: 0;
-}
-
-body {
+/* 
+.bpmBox {
   font-size: 24px;
   padding: 10px;
-  background-color: bisque;
-}
+  background-color: grey;
+} */
