--- a/src/componants/tpod/Tpod.css
+++ b/src/componants/tpod/Tpod.css
@@ -5,6 +5,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 30%;
+    height: 30%;
 }
 
 /* body {
@@ -15,14 +17,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    /* min-height: 50vh;
+    height: 50vh; */
     padding: 20px;
     padding: 20px;
 	margin: 20px;
-	height: 100vh;
+
 }
 
-@media(min-width: 768px){
+/* @media(min-width: 768px){
   .wrapper {
       width: 680px;
   }
@@ -32,7 +35,7 @@
   .wrapper {
      grid-template-columns: 1fr 1fr;
   }
-}
+} */
 
 /* .tpodContainer {
 	padding: 20px;
