--- a/src/componants/Navigation.css
+++ b/src/componants/Navigation.css
@@ -1,73 +1,114 @@
-.navbar {
-    width: 100%;
-    height: 50px;
-    /* background-color: azure; */
-    position: relative;
-    top: 20px;
-    display: flex;
-    align-items: center;
-    font-family: 'Josefin Sans', sans-serif;
-    z-index: 999;
-}  
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Luckiest+Guy&family=Original+Surfer&family=Racing+Sans+One&family=Rubik+Mono+One&family=Single+Day&display=swap');
 
-.navLeft, .navRight {
-    flex: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center
+.navbar {
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	/* height: 50px; */
+	/* background-color: azure; */
+	/* position: relative; */
+	/* top: 20px; */
+	display: flex;
+	align-items: center;
+	font-family: "Josefin Sans", sans-serif;
+	/* z-index: 999; */
+}
+
+.navLeft,
+.navRight {
+	flex: 3;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .navCenter {
-    flex: 6; 
+	flex: 6;
 }
-.navIcon {
+/* .navIcon {
     width: 20px;
     height: 20px;
     margin-right: 10px;
     color: #FF007C;
     cursor: pointer;
-    border: 3px solid transparent; 
+    border: 3px solid transparent;
     border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
     border-image-slice: 1;
+} */
+
+.navLogo {
+	width: 18%;
+	height: 18%;
+	margin-right: 10px;
+	cursor: pointer;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
 .navImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    object-fit: cover; 
-    cursor: pointer;
-    /* border: 2px solid transparent; 
+	width: 40px;
+	height: 40px;
+	border-radius: 50px;
+	object-fit: cover;
+	cursor: pointer;
+	/* border: 2px solid transparent;
     border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
     border-image-slice: 1; */
 }
 
 .navCenter {
-    flex: 6;
+	flex: 6;
 }
 
 .navList {
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    margin: 0;
-    list-style: none;
-    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-    /* -webkit-background-clip: text; */
-
+	display: flex;
+	justify-content: center;
+	padding: 5px;
+	margin: 0;
+	list-style: none;
+	background-image: linear-gradient(
+		to left,
+		violet,
+		indigo,
+		blue,
+		green,
+		yellow,
+		orange,
+		red
+	);
+	/* -webkit-background-clip: text; */
 }
 
 .navListItem {
-    margin-right: 20px;
-    font-size: 18px;
-    font-weight: 300;
-    cursor: pointer;
-  
+	margin-right: 20px;
+	font-size: 18px;
+	font-weight: 300;
+	cursor: pointer;
 }
 
 .navSearchIcon {
- font-size: 18px;
- color: #FFF700; 
- cursor: pointer; 
- margin-left: 15px; 
+	font-size: 18px;
+	color: #66ff66;
+	cursor: pointer;
+	margin-left: 15px;
+}
+
+.navLogoTag{
+	display: flex;
+	flex-direction: column;
+	font-family: "Single Day";
+	font-size: 18px;
+	 background: linear-gradient(90deg, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2b, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d4ff, #0af, #007fff, #05f, #002bff, #00f, #2a00ff, #50f, #7f00ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
+    color: #0000;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-weight: bold;
 }
