--- a/src/componants/Post.css
+++ b/src/componants/Post.css
@@ -68,7 +68,7 @@
 .postDesc {
    font-family: 'Julius Sans One', sans-serif; 
    font-size: 14px;
-   color: white;
+   color: #757575;
    line-height: 24px;
    margin-top: 15px;
    overflow: hidden;
