--- a/src/componants/mutools/DrMachine.css
+++ b/src/componants/mutools/DrMachine.css
@@ -1,6 +1,6 @@
 /* import * as React from "https://cdn.skypack.dev/react@17.0.1";
 import * as ReactDOM from "https://cdn.skypack.dev/react-dom@17.0.1"; */
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap");
 
 /* *{
   margin: 0;
@@ -15,23 +15,36 @@ body {
 } */
 
 #drum-machine {
-  /* margin: 15px; */
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+	/* margin: 15px; */
+	/* border: solid blue; */
+	/* height: 100vh; */
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0 auto;
+	width: 50%;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
-.wrapper {
-    width: 100%;
-    display: grid;
-    padding: 20px;
-    grid-gap: 15px;
-    margin-top: 40px;
-    border-radius: 15px;
-    grid-template-columns: 1fr;
-    background-image: radial-gradient(
+.drumMachineWrapper {
+	width: 100%;
+	display: grid;
+	padding: 20px;
+	grid-gap: 15px;
+	margin-top: 40px;
+	border-radius: 15px;
+	grid-template-columns: 1fr;
+	background-image: radial-gradient(
 		circle,
 		#c5d5e0,
 		#bbc9d2,
@@ -46,29 +59,29 @@ body {
 		#a4bbdd,
 		#aec2ed
 	);
-    /* background-image: linear-gradient(
+	/* background-image: linear-gradient(
 -225deg
 ,  	#AAF0D1  25%, #755dd5 100%); */
 }
 
 .keyboard {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(3, 1fr);
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(3, 1fr);
 }
 
 .keyboard .drum-pad {
-  width: 100%;
-  height: 80px;
-  outline: none;
-  font-family: "Rubik Mono One";
-  font-size: 24px;
-    -webkit-animation: animatedBackground_b 5s linear infinite alternate;
-  cursor: pointer;
-  border-radius: 10px;
-  background-color: #2D383A;
-  transition: all .3s ease-in-out;
-  border: 5px solid #A7F432;
+	width: 100%;
+	height: 80px;
+	outline: none;
+	font-family: "Rubik Mono One";
+	font-size: 24px;
+	-webkit-animation: animatedBackground_b 5s linear infinite alternate;
+	cursor: pointer;
+	border-radius: 10px;
+	background-color: #2d383a;
+	transition: all 0.3s ease-in-out;
+	border: 5px solid #a7f432;
 	/* border-image: linear-gradient(
 		to bottom right,
 		#b827fc 0%,
@@ -80,8 +93,7 @@ body {
 	border-image-slice: 1; */
 }
 
-
-@media(min-width: 768px){
+/* @media(min-width: 768px){
   .wrapper {
       width: 680px;
   }
@@ -91,30 +103,30 @@ body {
   .wrapper {
      grid-template-columns: 1fr 1fr;
   }
-}
+} */
 
 .controle {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .controle > button,
 .controle > input,
-.controle > h2{
-  margin-bottom: 10px
+.controle > h2 {
+	margin-bottom: 10px;
 }
 
-.controle button{
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-  font-size: 20px;
-  padding: 8px 10px;
-  border-radius: 5px;
-  background-color: #000000;
-   border: 5px solid #E936A7;
+.controle button {
+	border: none;
+	color: #ffffff;
+	cursor: pointer;
+	font-size: 20px;
+	padding: 8px 10px;
+	border-radius: 5px;
+	background-color: #000000;
+	border: 5px solid #e936a7;
 	/* border-image: linear-gradient(
 		to bottom right,
 		#b827fc 0%,
