--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,7 +1,7 @@
 .loginContainer {
 	background-image: 
-		url(https://images.pexels.com/photos/1779487/pexels-photo-1779487.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-	background-size: cover;
+	url(https://images.unsplash.com/photo-1552819401-700b5e342b9d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8b3BlbiUyMGRvb3J8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60);
+	background-size: content;
 	height: 100vh;
 }
 .login {
@@ -15,17 +15,27 @@
 }
 
 .loginTitle {
-	top: 50px;
+	top: 30px;
 	font-size: 50px;
-	color: #0048BA;
+	background-image: linear-gradient(
+		to left,
+		violet,
+		indigo,
+		blue,
+		green,
+		yellow,
+		orange,
+		red
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .loginForm {
-	margin-top: 80px;
+	margin-top: 60px;
 	display: flex;
 	flex-direction: column;
 	color: #FF007C;
-
 }
 
 .loginForm > label {
@@ -33,7 +43,7 @@
 }
 
 .loginInput {
-	padding: 10px;
+	padding: 5px;
 	background-color: white;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
@@ -54,7 +64,7 @@
 	border: none;
 	color: white;
 	border-radius: 10px;
-	padding: 10px;
+	padding: 7px;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
 		to bottom right,
@@ -75,7 +85,7 @@
 .loginRegisterButton {
 	position: absolute;
 	top: 15%;
-	right: 20px;
+	right: 50px;
 	background-color: teal;
 	cursor: pointer;
 	border: none;
