--- a/src/pages/Music.css
+++ b/src/pages/Music.css
@@ -2,48 +2,62 @@
 
 .musicContainer {
 	top: 40px;
-
-}
-
-.playerContainer {
 	text-align: center;
 	align-items: center;
+	justify-content: center;
+	/* display: flex;
+	flex-direction: column; */
 }
-
-/* .playerContainer h2 {
+.trackPlayerBox {
 	bottom: 30px;
-	color: #2243B6;
-	font-family: "Pacifico", cursive;
-	text-shadow: 2px 2px 4px#FF5470;
-	 -webkit-animation: rainbow 5s infinite; 
-} */
-
-.playerContainer {
-	bottom: 30px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 	font-size: 30px;
-	font-family: "Pacifico", cursive;
-	text-decoration: underline;
-    -webkit-animation: animatedBackground_b 5s linear infinite alternate;
+	-webkit-animation: animatedBackground_b 5s linear infinite alternate;
 }
 
-@keyframes animatedBackground_b{
-	0% {color: #ff8b00}
-	10% {color: #e8ff00}
-	20% {color: #5dff00}
-	30% {color: #00ff2e}
-	40% {color: #00ffb9}
-	50% {color: #00b9ff}
-	60% {color: #002eff}
-	70% {color: #5d00ff}
-	80% {color: #e800ff}
-	90% {color: #ff008b}
-	100% {color: #ff0000}
+@keyframes animatedBackground_b {
+	0% {
+		color: #ff8b00;
+	}
+	10% {
+		color: #e8ff00;
+	}
+	20% {
+		color: #5dff00;
+	}
+	30% {
+		color: #00ff2e;
+	}
+	40% {
+		color: #00ffb9;
+	}
+	50% {
+		color: #00b9ff;
+	}
+	60% {
+		color: #002eff;
+	}
+	70% {
+		color: #5d00ff;
+	}
+	80% {
+		color: #e800ff;
+	}
+	90% {
+		color: #ff008b;
+	}
+	100% {
+		color: #ff0000;
+	}
 }
 
 .listenImg {
 	height: 50px;
 	width: 60px;
-	top: 20px;
+	align-items: center;
+	margin: 20px;
 	padding: 5px;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
@@ -58,9 +72,8 @@
 }
 
 .trackPlayer {
-	margin-top: 25px;
-	left: 26%;
-	
+	/* margin-top: 40px; */
+	/* left: 25%;	 */
 	/* padding: 5px; */
 	/* align-items: center;
 	text-align: center;
@@ -73,32 +86,38 @@
 		#fec837 75%,
 		#fd1892 100%
 	);
-	border-image-slice: 1; */	 
+	border-image-slice: 1; */
+}
+
+.muPlayers {
+	margin: 10px;
 }
 
 .drmachineContainer {
-	height: 100%;
-	width: 70%;
+	height: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
-	top: 30px;
+	/* top: 30px;
 	padding: 30px;
-	margin: 30px;
-	left: 12%;
+	margin: 30px; */
+	/* left: 12%; */
 	font-size: 30px;
-    -webkit-animation: animatedBackground_b 5s linear infinite alternate;
+	-webkit-animation: animatedBackground_b 5s linear infinite alternate;
 }
 
-.music {
+/* .musicItemBox {
 	display: flex;
+	flex-direction: column;
 	bottom: 50px;
 	font-family: "Pacifico", cursive;
 	text-decoration: underline;
 	-webkit-animation: animatedBackground_b 5s linear infinite alternate
-}
+} */
 
-.tpodContainer {
-	left: 10%;
+/* .tpodContainer {
+
+	height: 20%;
 	padding: 10px;
 	margin:10px;
 	border: 3px solid transparent;
@@ -111,10 +130,9 @@
 		#fd1892 100%
 	);
 	border-image-slice: 1;
-}
+} */
 
-.bpmContainer {
-	left: 20%;
+/* .bpmContainer {
 	width: 40%;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
@@ -126,4 +144,4 @@
 		#fd1892 100%
 	);
 	border-image-slice: 1;
-}
+} */
