--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,10 +1,5 @@
 .registerContainer {
-	background-image: linear-gradient(
-			to bottom,
-			rgba(255, 255, 255, 0) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		url(https://images.pexels.com/photos/4740492/pexels-photo-4740492.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+	background-image: url(https://image.freepik.com/free-photo/light-from-open-door_53876-74776.jpg);
 	background-size: contain;
 	height: 100vh;
 }
@@ -39,6 +34,7 @@
 	margin-top: 10px;
 	display: flex;
 	flex-direction: column;
+	color: #FF007C;
 }
 
 .registerForm > label {
@@ -67,7 +63,7 @@
 	border: none;
 	color: white;
 	border-radius: 10px;
-	padding: 10px;
+	padding: 5px;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
 		to bottom right,
@@ -83,12 +79,12 @@
 .registerLoginButton {
 	position: absolute;
 	top: 15%;
-	right: 40px;
+	right: 45px;
 	background-color: #ff3399;
 	cursor: pointer;
 	border: none;
 	color: white;
-	padding: 0px 10px;
+	padding: 5px 10px;
 	border-radius: 10px;
 	border: 3px solid transparent;
 	border-image: linear-gradient(
