--- a/src/pages/Snaps.css
+++ b/src/pages/Snaps.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Luckiest+Guy&family=Original+Surfer&family=Rubik+Mono+One&display=swap');
+
 .snaps {
 	padding-top: 80px;
 	padding-bottom: 200px;
@@ -5,23 +7,20 @@
 	flex-direction: column;
 }
 
-h2 {
+.snaps h2 {
 	text-align: center;
-	background: linear-gradient(
-		to right,
-		#ef5350,
-		#f48fb1,
-		#7e57c2,
-		#2196f3,
-		#26c6da,
-		#43a047,
-		#eeff41,
-		#f9a825,
-		#ff5722
-	);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	font-family: 'Original Surfer', cursive;
+	    background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
+    -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #0000;
+    background-clip: text;
 }
+@keyframes animatedBackground_a {
+    0% { background-position: 0 0 }
+    100% { background-position: -500px 0 }
+}
+
 .snapsImg {
 	margin-left: 150px;
 	width: 70vw;
@@ -118,14 +117,16 @@ h2 {
 .snapsSubmit {
 	position: absolute;
 	/* display: flex; */
+	top: 105%;
 	left: 45%;
-	margin: 20px;
+	margin: 10px;
 	float: left;
 	color: rgb(255, 0, 157);
 	background-color: yellowgreen;
-	padding: 5px;
+	padding: 7px;
 	border: 3px solid #2243b6;
 	border-radius: 10px;
 	cursor: pointer;
-	font-size: 16px;
+	font-size: 15px;
+	width: 100px;
 }
