--- a/src/pages/footerpages/About.css
+++ b/src/pages/footerpages/About.css
@@ -77,7 +77,7 @@ align-items: center;
 	border: 2px groove #FF00FF;
 }
 
-.aboutDown > img  {
+.aboutDown img  {
 	width: 70px;
     height: 70px;
 	border: 2px groove #FF00FF;
