--- a/src/pages/footerpages/Contact.css
+++ b/src/pages/footerpages/Contact.css
@@ -3,6 +3,26 @@
 .contactBox { background:black;}
 .contactBox form { max-width:420px; margin:50px auto; }
 
+.contactTitle { 
+  display: flex;
+  justify-content: center;
+  font-family: 'Original Surfer', cursive;
+	font-size: 25px;
+  background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
+    -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #0000;
+    background-clip: text;
+
+}
+.contactTitleMail {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+
+}
+
+
 .feedback-input {
   color:white;
   font-family: Helvetica, Arial, sans-serif;
