--- a/src/pages/footerpages/MyCalendar.css
+++ b/src/pages/footerpages/MyCalendar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Luckiest+Guy&family=Rubik+Mono+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Luckiest+Guy&family=Rubik+Mono+One&display=swap');
 
 .myCalendarContainer {
     padding: 10px;
@@ -35,4 +35,4 @@
 		#fd1892 100%
 	);
 	border-image-slice: 1;
-}
+} */
