--- a/src/componants/SinglePost.css
+++ b/src/componants/SinglePost.css
@@ -19,7 +19,16 @@
 	width: 100%;
 	height: 300px;
 	border-radius: 5px;
-	border: 2px outset yellowgreen;
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
 .singlePostTitle {
@@ -39,9 +48,9 @@
     100% { background-position: -500px 0 }
 }
 
-.singlePostAutor{
+/* .singlePostAutor{
 	color: #9C51B6;
-}
+} */
 
 .singlePostDate{
 	color: #2243B6;
@@ -53,9 +62,32 @@
 	margin: 20px;
 	font-family: "Arima Madurai";
 	font-size: 28px;
-	border: 4px groove yellowgreen;
-	color: #CCFF00;
-	
+	color: #757575;
+	background-image: radial-gradient(
+		circle,
+		#c5d5e0,
+		#bbc9d2,
+		#b1bdc5,
+		#a8b2b8,
+		#9ea6ab,
+		#9aa5ac,
+		#97a4ad,
+		#93a3ae,
+		#97acbe,
+		#9cb4cd,
+		#a4bbdd,
+		#aec2ed
+	);
+	border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
 .singlePostTitleInput:focus {
@@ -107,6 +139,7 @@
 	background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  
 }
 
 .singlePostDesc:first-letter {
@@ -116,10 +149,34 @@
 }
 
 .singlePostDescInput {
-	border: 3px groove yellowgreen;
-	color: #CCFF00;
+	color: #757575;
 	font-size: 18px;
 	/* line-height: 25px; */
+	background-image: radial-gradient(
+		circle,
+		#c5d5e0,
+		#bbc9d2,
+		#b1bdc5,
+		#a8b2b8,
+		#9ea6ab,
+		#9aa5ac,
+		#97a4ad,
+		#93a3ae,
+		#97acbe,
+		#9cb4cd,
+		#a4bbdd,
+		#aec2ed
+	);
+border: 3px solid transparent;
+	border-image: linear-gradient(
+		to bottom right,
+		#b827fc 0%,
+		#2c90fc 25%,
+		#b8fd33 50%,
+		#fec837 75%,
+		#fd1892 100%
+	);
+	border-image-slice: 1;
 }
 
 .singlePostDescInput:focus {
@@ -131,7 +188,7 @@
 	background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
 	padding: 5px;
 	margin-top: 30px;
-	color: white;
+	color: #FF007C;
 	border: 3px solid;
 	border-radius: 5px;
 	cursor: pointer;
