--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -17,7 +17,8 @@
 .loginTitle {
 	top: 30px;
 	font-size: 50px;
-	background-image: linear-gradient(
+	color: #FF007C;
+	/* background-image: linear-gradient(
 		to left,
 		violet,
 		indigo,
@@ -28,7 +29,7 @@
 		red
 	);
 	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	-webkit-text-fill-color: transparent; */
 }
 
 .loginForm {
