--- a/src/componants/Footer.css
+++ b/src/componants/Footer.css
@@ -68,6 +68,7 @@
 
 .bottomCenter {
 	flex: 6;
+
 }
 
 .bottomList {
@@ -76,7 +77,10 @@
 	padding: 0;
 	margin: 0;
 	list-style: none;
-	color: white;
+	color: red;
+}
+.bottomList a { 
+	color: #7FFFD4;
 }
 
 .bottomListItem {
