--- a/src/pages/footerpages/About.css
+++ b/src/pages/footerpages/About.css
@@ -1,17 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@500&family=Darker+Grotesque:wght@300&family=Libre+Barcode+39+Text&family=Monoton&family=Road+Rage&family=Roboto:ital,wght@0,300;0,400;0,700;1,500&family=Ropa+Sans&display=swap');
 
-.aboutContainer{
-text-align: center;
-display: flex;
-flex-direction: column;
-align-items: center;
 
+.about-container {
+  font-family: 'Pacifico', sans-serif;
+  background-color: #000;
+  text-align: center;
 }
 
-.aboutContainerTitle{
+.about-container h1 {
 	font-family: 'Road Rage', cursive;
-	font-size: 60px;
+	font-size: 100px;
 	color: black;
 	 background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
     -webkit-animation: animatedBackground_a 5s linear infinite alternate;
@@ -20,77 +19,116 @@ align-items: center;
     background-clip: text;
 }
 
-.aboutTop {
-	height: 100%;
-	padding-bottom: 2rem;
-    padding:10px;
-	display: flex;
-	flex-wrap: wrap;
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin: 2rem 7vw;
+  padding: 0;
+  list-style-type: none;
 }
 
-.aboutDown{
-	height: 100vh;
-	padding-bottom: 2rem;
-    padding:10px;
-	display: flex;
-	flex-wrap: wrap;
+.card {
+  position: relative;
+  display: block;
+  height: 100%;  
+  overflow: hidden;
+  text-decoration: none;
+  border: 5px solid transparent;
+  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+  border-image-slice: 1;
 }
 
-
-.aboutBox p {
-	padding: 5px 8px;
+.card__image {      
+  width: 100%;
+  height: 100%;
 }
 
-.nori,
-.sori,
-.drmoon,
-.mizgold,
-.queensy,
-.redbilly {
-	height: 250px;
-	width: 100px;
-	box-sizing: border-box;
-	margin: 20px;
-	/* flex-basis: 40px;
-	flex-grow: 1;
-	flex-shrink: 1; */
-	font-family: "Pacifico";
-	font-size: 12px;
-	border-radius: 10%;
-	padding: 0px 10px;
-    border: 3px solid transparent;
-	border-image: linear-gradient(
-		to bottom right,
-		#b827fc 0%,
-		#2c90fc 25%,
-		#b8fd33 50%,
-		#fec837 75%,
-		#fd1892 100%
-	);
-	border-image-slice: 1;
-
+.card__overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;      
+  border-radius: 40px;;    
+background-color: #9e8fb2;
+background-image: linear-gradient(315deg, #9e8fb2 0%, #a7acd9 74%);
+  transform: translateY(100%);
+  transition: .2s ease-in-out;
 }
 
-.aboutTop img {
- 	width: 70px;
-    height: 70px;
-	border: 2px groove #FF00FF;
+.card:hover .card__overlay {
+  transform: translateY(0);
 }
 
-.aboutDown img  {
-	width: 70px;
-    height: 70px;
-	border: 2px groove #FF00FF;
+.card__header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 2em;
+  padding: 2em;
+  border-radius: calc(var(--curve) * 1px) 0 0 0;    
+  background-color: transparent;
+  transform: translateY(-100%);
+  transition: .2s ease-in-out;
 }
 
-
-.crewName{
-	color: #00FA9A;
+.card__arc {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 100%;
+  right: 0;      
+  z-index: 1;
 }
 
-.crewTitle{
-text-align: right;
-color: #50BFE6;
+.card__arc path {
+  fill: var(--surface-color);
+  d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+}       
 
+.card:hover .card__header {
+  transform: translateY(0);
 }
 
+.card__thumb {
+  flex-shrink: 0;
+  width: 50px;
+  height: 50px;      
+  border-radius: 50%;      
+}
+
+.card__title {
+  font-size: 1.5em;
+  margin: 0 0 .3em;
+   background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
+    -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #0000;
+    background-clip: text;
+}
+
+.card__tagline {
+  display: block;
+  margin: 1em 0;
+  font-family: "MockFlowFont";  
+  font-size: .8em; 
+  color: #D7BDCA;  
+}
+
+.card__status {
+  font-size: .8em;
+  font-weight: bold;
+  color:  	#87FF2A;
+}
+
+.card__description {
+  padding: 0 2em 2em;
+  margin: 0;
+  color: #FF3399;
+  font-family: 'Pacifico', sans-serif;;   
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}    
